fixed bug with places tab not showing active selection

--- a/Moovn/static/css/main.css
+++ b/Moovn/static/css/main.css
@@ -1635,6 +1635,9 @@ header {
 .no-data-message {
   padding-top: 2em; }
 
+.housing-graph {
+  padding-top: 3em; }
+
 .full-screen-container {
   margin-top: 0em;
   margin-right: 0em;
