--- a/src/css/_city.scss
+++ b/src/css/_city.scss
@@ -69,6 +69,9 @@
 .no-data-message{
   padding-top:2em;
 }
+.housing-graph{
+  padding-top:3em;
+}
 
 //adjusts tabs in certain views to go fullscreen
 .full-screen-container{
